--- a/metadata.yaml
+++ b/metadata.yaml
@@ -9,6 +9,9 @@ contributor:
     gutenberg_agent_id: '55809'
     url: http://www.gutenberg.org/2009/agents/55809
     wikipedia: https://en.wikipedia.org/wiki/Frank_Frazetta
+covers:
+- cover_type: archival
+  image_path: 70815-h/images/cover.jpg
 creator:
   author:
     agent_name: Burroughs, Edgar Rice
@@ -18,6 +21,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/48
     wikipedia: https://en.wikipedia.org/wiki/Edgar_Rice_Burroughs
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70815#Tarzan-at-the-Earth-s-core
 gutenberg_issued: '2023-05-20'
 identifiers:
   gutenberg: '70815'
